exercises/macros/tests/invalid/two-arrows.stderr
error: no rules expected the token `=>`
 --> $DIR/two-arrows.rs:5:24
  |
5 |     hashmap!('a' => 2, =>);
  |                        ^^ no rules expected this token in macro call
